--- a/source/form.html
+++ b/source/form.html
@@ -8,20 +8,18 @@
 
 <body>
   <header class="page-header">
-    <div class="page-header__wrapper">
-      <a class="page-header__logo"></a>
-    </div>
+    <a class="page-header__logo" href='#'></a>
     <nav class="main-nav">
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
-            <a>Главная</a>
+            <a href='index.html'>Главная</a>
           </li>
           <li class="site-list__item">
             <a href="photo.html">Фотографии</a>
           </li>
           <li class="site-list__item">
-            <a href="competition.html">Конкурс</a>
+            <a class="site-list__link site-list__link--active">Конкурс</a>
           </li>
           <li class="site-list__item">
             <a href="#">HTML Academy</a>
@@ -33,30 +31,30 @@
   </header>
   <main class="page-main">
     <section class="page-main__info">
-      <h2 class="info__description">Конкурс на самое безбашенное путешествие с Пинк</h2>
+      <h1 class="page-main__description">Конкурс на самое безбашенное путешествие с Пинк</h1>
     </section>
   </main>
   <footer class="page-footer">
     <img class="page-footer__logo" src="#" alt="картинка очков пинк">
     <ul class="page-footer__list social-list">
       <li class="social-list__item">
-        <a class="social-list__link social-list__link--twitter" href="#">
+        <a class="social-list__link social-list__link--twitter" href="#" aria-label="Твиттер">
           <img src="#" alt="Картинка Твиттер">Твиттер
         </a>
       </li>
       <li class="social-list__item">
-        <a class="social-list__link social-list__link--facebook">
-          <img src="#" alt="Картинка Youtube">Ютуб
+        <a class="social-list__link social-list__link--facebook" href='#' aria-label="Фейсбук">
+          <img src="#" alt="Картинка Facebook">Фейсбук
         </a>
       </li>
       <li class="social-list__item">
-        <a class="social-list__link social-list__link--youtube">
+        <a class="social-list__link social-list__link--youtube" href='#' aria-label="Ютуб">
           <img src="#" alt="Картинка Youtube">Ютуб
         </a>
       </li>
     </ul>
     <div class="page-footer__developers">
-      <p class="developers__name">Разработано <span class="developers__logo"></span></p>
+      <p class="page-footer__name">Разработано <span class="page-footer__logo"></span></p>
     </div>
   </footer>
 </body>
