--- a/source/index.html
+++ b/source/index.html
@@ -8,14 +8,12 @@
 
 <body>
   <header class="page-header">
-    <div class="page-header__wrapper">
-      <a class="page-header__logo"></a>
-    </div>
+    <a class="page-header__logo"></a>
     <nav class="main-nav">
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
-            <a>Главная</a>
+            <a class="site-list__link site-list__link--active">Главная</a>
           </li>
           <li class="site-list__item">
             <a href="photo.html">Фотографии</a>
@@ -33,30 +31,29 @@
   </header>
   <main class="page-main">
     <h1 class="visually-hidden">Пинк - сайт мобильного приложения</h1>
-    <section class="page-main__intro">
+    <section class="page-main__intro page-intro">
       <img class="page-intro__picture" alt="Изображение телефона с открытым приложением">
-      <a class="button page-intro__link" href="#">Скачать приложение</a>
+      <a class="button page-intro__button" href="#">Скачать приложение</a>
       <ul class="page-intro__list available-list">
         <li class="available-list-item">
           <a class="available-list-link available-list-link--iphone" href="#">
-            <img src="" alt="Картинка айфона">Скачать для Айфона</a>
+            <img src="" alt="Картинка айфона"><span class="visually-hidden">Скачать для Айфона</span></a>
         </li>
         <li class="available-list-item">
           <a class="available-list-link available-list-link--android" href="#">
-            <img src="" alt="Картинка Андроида">Скачать для Андроид</a>
+            <img src="" alt="Картинка Андроида"><span class="visually-hidden">Скачать для Андроид</span></a>
         </li>
         <li class="available-list-item">
           <a class="available-list-link available-list-link--windows" href="#">
-            <img src="" alt="Картинка Windows">Скачать для Windows</a>
+            <img src="" alt="Картинка Windows"><span class="visually-hidden">Скачать для Windows</span></a>
         </li>
       </ul>
       <p class="page-intro__info">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
     </section>
     <section class="page-main__features">
-      <div class="features__header">
-        <h2 class="features__slogan">Устали от серости мегаполиса?</h2>
-        <h2 class="features__slogan features__slogan--prolongation">Нам есть, что вам предложить!</h2>
-      </div>
+      <header class="features__header">
+        <h2 class="features__slogan">Устали от серости мегаполиса? Нам есть, что вам предложить!</h2>
+      </header>
       <ul class="features__list">
         <li class="features__item">
           <h3 class="features__name">Поднимает настроение</h3>
