--- a/source/photo.html
+++ b/source/photo.html
@@ -8,17 +8,15 @@
 
 <body>
   <header class="page-header">
-    <div class="page-header__wrapper">
-      <a class="page-header__logo"></a>
-    </div>
+    <a class="page-header__logo" href="#"></a>
     <nav class="main-nav">
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
-            <a>Главная</a>
+            <a href="#">Главная</a>
           </li>
           <li class="site-list__item">
-            <a href="photo.html">Фотографии</a>
+            <a class="site-list__link site-list__link--active">Фотографии</a>
           </li>
           <li class="site-list__item">
             <a href="competition.html">Конкурс</a>
@@ -33,16 +31,18 @@
   </header>
   <main class="page-main">
     <section class="page-main__info">
-      <h2 class="info__description">Фотографии Пользователей</h2>
+      <h1 class="page-main__description">Фотографии Пользователей</h1>
     </section>
     <section class="page-main__photo">
-      <h3 class="photo__description">Взгляните на фотографии, которые выкладывают пользователи!Видите, как не хватает ваших?</h3>
+      <h2 class="photo__description">Взгляните на фотографии, которые выкладывают пользователи!Видите, как не хватает ваших?</h2>
       <ul class="photo-list">
         <li class="photo-list__item">
           <img class="photo__picture photo__picture--day" src="#" alt="Фотография красивого вида">
           <div class="photo__wrapper">
-            <p class="photo__username">Аннa</p>
-            <p class="photo__activity"><span class="vissually-hidden">Последняя активность</span>(5 минут назад)</p>
+            <div class="photo__username-wrapper">
+              <p class="photo__username">Аннa</p>
+              <p class="photo__activity"><span class="vissually-hidden">Последняя активность</span>(5 минут назад)</p>
+            </div>
             <p class="photo__comment">Прыгать или нет? Напишите в коментарии свой совет и
               смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
             <button class="button photo_like-button"><span class="vissually-hidden">Поставить лайк</span></button>
@@ -52,8 +52,10 @@
         <li class="photo-list__item">
           <img class="photo__picture" src="#" alt="Фотография машины">
           <div class="photo__wrapper">
-            <p class="photo__username">Левон</p>
-            <p class="photo__activity"><span class="vissually-hidden">Последняя активность</span>(5 часов назад)</p>
+            <div class="photo__username-wrapper">
+              <p class="photo__username">Левон</p>
+              <p class="photo__activity"><span class="vissually-hidden">Последняя активность</span>(5 часов назад)</p>
+            </div>
             <p class="photo__comment">Вчера он на луну летал, сегодня в руки к нам попал.</p>
             <button class="button photo_like-button"><span class="vissually-hidden">Поставить лайк</span></button>
             <p class="photo_like">Нравится: 356</p>
@@ -62,8 +64,10 @@
         <li class="photo-list__item">
           <img class="photo__picture" src="#" alt="Фотография барабанной установки">
           <div class="photo__wrapper">
-            <p class="photo__username">Антон</p>
-            <p class="photo__activity"><span class="vissually-hidden">Последняя активность</span>(12 часов назад)</p>
+            <div class="photo__username-wrapper">
+              <p class="photo__username">Антон</p>
+              <p class="photo__activity"><span class="vissually-hidden">Последняя активность</span>(12 часов назад)</p>
+            </div>
             <p class="photo__comment">Соседи будут рады!</p>
             <button class="button photo_like-button"><span class="vissually-hidden">Поставить лайк</span></button>
             <p class="photo_like">Нравится: 666</p>
@@ -72,8 +76,10 @@
         <li class="photo-list__item">
           <img class="photo__picture" src="#" alt="Фотография высоких зданий">
           <div class="photo__wrapper">
-            <p class="photo__username">Борис</p>
-            <p class="photo__activity"><span class="vissually-hidden">Последняя активность</span>(20 часов назад)</p>
+            <div class="photo__username-wrapper">
+              <p class="photo__username">Борис</p>
+              <p class="photo__activity"><span class="vissually-hidden">Последняя активность</span>(20 часов назад)</p>
+            </div>
             <p class="photo__comment">Здесь могла быть ваша цитата о высоком и вечном.</p>
             <button class="button photo_like-button"><span class="vissually-hidden">Поставить лайк</span></button>
             <p class="photo_like">Нравится: 215</p>
@@ -82,8 +88,10 @@
         <li class="photo-list__item">
           <img class="photo__picture" src="#" alt="Фотография кубанской бахчи">
           <div class="photo__wrapper">
-            <p class="photo__username">Сергей</p>
-            <p class="photo__activity"><span class="vissually-hidden">Последняя активность</span>(25 часов назад)</p>
+            <div class="photo__username-wrapper">
+              <p class="photo__username">Сергей</p>
+              <p class="photo__activity"><span class="vissually-hidden">Последняя активность</span>(25 часов назад)</p>
+            </div>
             <p class="photo__comment">Самая кубанская в мире!</p>
             <button class="button photo_like-button"><span class="vissually-hidden">Поставить лайк</span></button>
             <p class="photo_like">Нравится: 4</p>
@@ -92,8 +100,10 @@
         <li class="photo-list__item">
           <img class="photo__picture" src="#" alt="Фотография мужских ног на холме">
           <div class="photo__wrapper">
-            <p class="photo__username">Максим</p>
-            <p class="photo__activity"><span class="vissually-hidden">Последняя активность</span>(40 часов назад)</p>
+            <div class="photo__username-wrapper">
+              <p class="photo__username">Максим</p>
+              <p class="photo__activity"><span class="vissually-hidden">Последняя активность</span>(40 часов назад)</p>
+            </div>
             <p class="photo__comment">Где снег-то?</p>
             <button class="button photo_like-button"><span class="vissually-hidden">Поставить лайк</span></button>
             <p class="photo_like">Нравится: 150</p>
@@ -101,8 +111,10 @@
         </li>
         <li class="photo-list__item"><img class="photo__picture" src="#" alt="Фотография самолета">
           <div class="photo__wrapper">
-            <p class="photo__username">Надежда</p>
-            <p class="photo__activity"><span class="vissually-hidden">Последняя активность</span>(45 часов назад)</p>
+            <div class="photo__username-wrapper">
+              <p class="photo__username">Надежда</p>
+              <p class="photo__activity"><span class="vissually-hidden">Последняя активность</span>(45 часов назад)</p>
+            </div>
             <p class="photo__comment">Всем GM и взаимные лайки!</p>
             <button class="button photo_like-button"><span class="vissually-hidden">Поставить лайк</span></button>
             <p class="photo_like">Нравится: 2560</p>
@@ -115,23 +127,23 @@
     <img class="page-footer__logo" src="#" alt="картинка очков пинк">
     <ul class="page-footer__list social-list">
       <li class="social-list__item">
-        <a class="social-list__link social-list__link--twitter" href="#">
+        <a class="social-list__link social-list__link--twitter" href="#" aria-label="Твиттер">
           <img src="#" alt="Картинка Твиттер">Твиттер
         </a>
       </li>
       <li class="social-list__item">
-        <a class="social-list__link social-list__link--facebook">
-          <img src="#" alt="Картинка Youtube">Ютуб
+        <a class="social-list__link social-list__link--facebook" href="#" aria-label="Фейсбук">
+          <img src="#" alt="Картинка Youtube">Фейсбук
         </a>
       </li>
       <li class="social-list__item">
-        <a class="social-list__link social-list__link--youtube">
+        <a class="social-list__link social-list__link--youtube" href="#" aria-label="Ютуб">
           <img src="#" alt="Картинка Youtube">Ютуб
         </a>
       </li>
     </ul>
     <div class="page-footer__developers">
-      <p class="developers__name">Разработано <span class="developers__logo"></span></p>
+      <p class="page-footer__name">Разработано <span class="page-footer__logo"></span></p>
     </div>
   </footer>
 </body>
