--- a/source/index.html
+++ b/source/index.html
@@ -39,7 +39,6 @@
             </li>
           </ul>
           <button class="main-nav__toggle main-nav__toggle--close" type="button">Закрыть/открыть меню</button>
-          <img class="page-header__picture" src="img/iphone-hand-mobile@1x.png" width="258" height="286" alt="Изображение телефона с открытым приложением">
         </div>
     </div>
     </nav>
@@ -47,6 +46,7 @@
   <main class="page-main">
     <h1 class="visually-hidden">Пинк - сайт мобильного приложения</h1>
     <section class="page-main__intro page-intro">
+      <h2 class="page-intro__header page-intro__header--index">Взгляните на жизнь иначе!</h2>
       <a class="button page-intro__button container" href="#">Скачать приложение</a>
       <ul class="page-intro__list available-list">
         <li class="available-list-item">
@@ -83,19 +83,19 @@
     </section>
     <section class="page-main__features features">
       <header class="features__header">
-        <h2 class="features__slogan"><span class="features-slogan--one">Устали от серости мегаполиса?</span><span class="features__slogan--two">Нам есть, что вам предложить!</span></h2>
+        <h3 class="features__slogan"><span class="features-slogan--one">Устали от серости мегаполиса?</span><span class="features__slogan--two">Нам есть, что вам предложить!</span></h3>
       </header>
       <ul class="features__list">
         <li class="features__item">
-          <h3 class="features__name">Поднимает настроение</h3>
+          <h4 class="features__name">Поднимает настроение</h4>
           <p class="features__info">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
         </li>
         <li class="features__item">
-          <h3 class="features__name">Меняет мир вокруг</h3>
+          <h4 class="features__name">Меняет мир вокруг</h4>
           <p class="features__info">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
         </li>
         <li class="features__item">
-          <h3 class="features__name">Заводит новых друзей</h3>
+          <h4 class="features__name">Заводит новых друзей</h4>
           <p class="features__info">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
         </li>
       </ul>
