--- a/source/index.html
+++ b/source/index.html
@@ -47,6 +47,11 @@
     <h1 class="visually-hidden">Пинк - сайт мобильного приложения</h1>
     <section class="page-main__intro page-intro">
       <h2 class="page-intro__header page-intro__header--index">Взгляните на жизнь иначе!</h2>
+      <picture>
+      <source media="(min-width: 960px)" srcset="../img/iphone-hand-desktop@1x.png">
+      <source media="(min-width: 660px)" srcset="../img/iphone-hand-tablet@1x.png">
+      <img src="../img/iphone-hand-mobile@1x.png" alt="Фотография руки с телефоном">
+    </picture>
       <a class="button page-intro__button container" href="#">Скачать приложение</a>
       <ul class="page-intro__list available-list">
         <li class="available-list-item">
