--- a/source/form.html
+++ b/source/form.html
@@ -22,23 +22,23 @@
           </svg>
         </span>
       </a>
-      <nav class="main-nav">
+      <nav class="main-nav main-nav--nojs">
         <div class="main-nav__wrapper">
-          <ul class="main-nav__list site-list">
+          <ul class="main-nav__list site-list main-nav__list--open">
             <li class="site-list__item">
-              <a class="site-list__link" href="index.html">Главная</a>
+              <a class="site-list__link site-list__link--active">Главная</a>
             </li>
             <li class="site-list__item">
               <a class="site-list__link" href="photo.html">Фотографии</a>
             </li>
             <li class="site-list__item">
-              <a class="site-list__link">Конкурс</a>
+              <a class="site-list__link" href="form.html">Конкурс</a>
             </li>
             <li class="site-list__item">
               <a class="site-list__link" href="#">HTML Academy</a>
             </li>
           </ul>
-          <button class="main-nav__toggle main-nav__toggle--close" type="button">Закрыть/открыть меню</button>
+          <button class="main-nav__toggle main-nav__toggle--closed" type="button">Закрыть/открыть меню</button>
         </div>
     </div>
     </nav>
@@ -148,12 +148,11 @@
           <legend class="contest__title">Опишите свои эмоции</legend>
           <textarea class="contest__textarea" name="comment" id="comment" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
         </fieldset>
-         <div class="contest__submit">
-            <button class="contest__button" type="submit">Отправить форму</button>
-            <p class="contest__explain"><span class="contest__explain--star">*</span> — обязательные поля</p>
-          </div>
+        <div class="contest__submit">
+          <button class="contest__button" type="submit">Отправить форму</button>
+          <p class="contest__explain"><span class="contest__explain--star">*</span> — обязательные поля</p>
+        </div>
       </form>
-
     </section>
   </main>
   <footer class="page-footer">
@@ -192,18 +191,34 @@
   </footer>
 </body>
 <section class="submit-sucsess">
-          <p class="submit-sucsess__title">Ваша заявка отправлена</p>
-          <p class="submit-sucsess__discription">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
-          <p class="submit-sucsess__button-wrapper">
-            <button class="submit-sucsess__close-button" type="button">Закрыть окно</button>
-          </p>
-      </section>
-      <section class="submit-unsucsess">
-          <p class="submit-unsucsess__title">Что-то пошло не так!</p>
-          <p class="submit-unsucsess__discription">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
-          <p class="submit-unsucsess__button-wrapper">
-            <button class="submit-unsucsess__close-button" type="button">Ок</button>
-          </p>
-      </section>
+  <p class="submit-sucsess__title">Ваша заявка отправлена</p>
+  <p class="submit-sucsess__discription">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
+  <p class="submit-sucsess__button-wrapper">
+    <button class="submit-sucsess__close-button" type="button">Закрыть окно</button>
+  </p>
+</section>
+<section class="submit-unsucsess">
+  <p class="submit-unsucsess__title">Что-то пошло не так!</p>
+  <p class="submit-unsucsess__discription">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+  <p class="submit-unsucsess__button-wrapper">
+    <button class="submit-unsucsess__close-button" type="button">Ок</button>
+  </p>
+</section>
 
+<script>
+  var navMainList = document.querySelector('.main-nav__list');
+  var navToggle = document.querySelector('.main-nav__toggle');
+  var navMain = document.querySelector('.main-nav');
+
+  navMain.classList.remove('main-nav--nojs');
+
+  navToggle.addEventListener('click', function() {
+    navToggle.classList.toggle('main-nav__toggle--closed');
+    if (navMainList.classList.contains('main-nav__list--open')) {
+      navMainList.classList.remove('main-nav__list--open');
+    } else {
+      navMainList.classList.add('main-nav__list--open');
+    }
+  });
+</script>
 </html>
