--- a/source/photo.html
+++ b/source/photo.html
@@ -48,7 +48,7 @@
       <h1 class="page-main__description">Фотографии Пользователей</h1>
     </section>
     <section class="page-main__photo photo">
-      <h2 class="photo__description">Взгляните на фотографии, которые выкладывают пользователи!Видите, как не хватает ваших?</h2>
+      <h2 class="photo__description description">Взгляните на фотографии, которые выкладывают пользователи!Видите, как не хватает ваших?</h2>
       <div class="photo__panorama panorama">
         <img class="panorama__picture" src="img/panorama-mobile@1x.jpg" width="320" height="137" alt="Фотография красивого вида">
         <div class="panorama__wrapper container">
@@ -181,56 +181,70 @@
     </section>
     <section class="page-main-editor editor">
       <h2 class="visually-hidden">Редактирование фото</h2>
-      <p class="editor__description">Затмите их всех! Выкладывайте всё, что накопилось в телефоне!</p>
+      <div class="container">
+        <p class="editor__description description">Затмите их всех! <br> Выкладывайте всё, что накопилось в телефоне!</p>
+      </div>
       <form class="editor__form" action="https://echo.htmlacademy.ru" method="post">
-        <img class="editor__photo" src="img/photo-road-mobile@1x.jpg" width="280" height="374" alt="Фото c лесом">
-        <div class="editor__wraper">
-          <ul class="editor__list">
-            <li class="editor__item">
-              <button class="editor__button editor__button--setting editor__button--crop">
-                <span class="visually-hidden">Обрезать</span>
-                <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="48px" height="48px" viewBox="0 0 48 48" enable-background="new 0 0 48 48" xml:space="preserve">
-                  <path fill="none" d="M0,0h48v48H0V0z" />
-                  <path d="M34,30h4V14c0-2.21-1.79-4-4-4H18v4h16V30z M14,34V2h-4v8H2v4h8v20c0,2.21,1.79,4,4,4h20v8h4v-8h8v-4H14z" />
-                </svg> </button>
-              <span class="editor__scale">
-                <span class="editor__toggle editor__toggle--one"></span>
-              </span>
-            </li>
-            <li class="editor__item">
-              <button class="editor__button editor__button--setting editor__button--fill editor__button--fill--active " type="button">
-                <span class="visually-hidden">Залить</span>
-                <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="48px" height="48px" viewBox="0 0 48 48" enable-background="new 0 0 48 48" xml:space="preserve">
-                  <path fill="none" d="M0,0h48v48H0V0z" />
-                  <path d="M33.12,17.88L15.24,0l-2.83,2.83l4.76,4.76L6.88,17.88c-1.17,1.17-1.17,3.07,0,4.24l11,11C18.46,33.71,19.23,34,20,34 s1.54-0.29,2.12-0.88l11-11C34.29,20.95,34.29,19.05,33.12,17.88z M10.41,20L20,10.42L29.59,20H10.41z M38,23c0,0-4,4.33-4,7 c0,2.21,1.79,4,4,4s4-1.79,4-4C42,27.33,38,23,38,23z" />
-                  <rect y="40" width="48" height="3" />
-                </svg>
-              </button>
-              <span class="editor__scale">
-                <span class="editor__toggle editor__toggle--two"></span>
-              </span>
-            </li>
-            <li class="editor__item">
-              <button class="editor__button editor__button--setting editor__button--contrast" type="button">
-                <span class="visually-hidden">Негатив</span>
-                <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="31.92px" height="31.92px" viewBox="-35.422 -7.96 31.92 31.92" enable-background="new -35.422 -7.96 31.92 31.92" xml:space="preserve">
-                  <path fill="#231F20" d="M-19.462-3.96c6.595,0,11.96,5.365,11.96,11.96s-5.365,11.96-11.96,11.96S-31.422,14.595-31.422,8 S-26.057-3.96-19.462-3.96 M-19.462-7.96c-8.814,0-15.96,7.145-15.96,15.96c0,8.813,7.146,15.96,15.96,15.96S-3.502,16.813-3.502,8 C-3.502-0.815-10.648-7.96-19.462-7.96L-19.462-7.96z" />
-                  <path d="M-19.462,16.331c4.706,0,8.52-3.813,8.52-8.52c0-4.705-3.813-8.519-8.52-8.519" />
-                </svg> </button>
-              <span class="editor__scale">
-                <span class="editor__toggle editor__toggle--three"></span>
-              </span>
-            </li>
-          </ul>
+        <div class="editor__wrapper-main container">
+          <picture class="editor__photo">
+            <source media="(min-width: 1200px)" srcset="img/photo-road-desktop@1x.jpg 1x">
+            <source media="(min-width: 660px)" srcset="img/photo-road-tablet@1x.jpg 1x">
+            <img src="img/photo-road-mobile@1x.jpg" width="280" height="374" alt="Фото c лесом">
+          </picture>
+          <div class="editor__wrapper container">
+            <ul class="editor__list">
+              <li class="editor__item">
+                <button class="editor__button editor__button--setting">
+                  <span class="visually-hidden">Обрезать</span>
+                  <svg class="editor__svg editor__svg--active" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="48px" height="48px" viewBox="0 0 48 48" enable-background="new 0 0 48 48" xml:space="preserve">
+                    <path fill="none" d="M0,0h48v48H0V0z" />
+                    <path d="M34,30h4V14c0-2.21-1.79-4-4-4H18v4h16V30z M14,34V2h-4v8H2v4h8v20c0,2.21,1.79,4,4,4h20v8h4v-8h8v-4H14z" />
+                  </svg> </button>
+              </li>
+              <li class="editor__item">
+                <button class="editor__button editor__button--setting editor__button--fill--active " type="button">
+                  <span class="visually-hidden">Залить</span>
+                  <svg class="editor__svg" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="48px" height="48px" viewBox="0 0 48 48" enable-background="new 0 0 48 48" xml:space="preserve">
+                    <path fill="none" d="M0,0h48v48H0V0z" />
+                    <path d="M33.12,17.88L15.24,0l-2.83,2.83l4.76,4.76L6.88,17.88c-1.17,1.17-1.17,3.07,0,4.24l11,11C18.46,33.71,19.23,34,20,34 s1.54-0.29,2.12-0.88l11-11C34.29,20.95,34.29,19.05,33.12,17.88z M10.41,20L20,10.42L29.59,20H10.41z M38,23c0,0-4,4.33-4,7 c0,2.21,1.79,4,4,4s4-1.79,4-4C42,27.33,38,23,38,23z" />
+                    <rect y="40" width="48" height="3" />
+                  </svg>
+                </button>
+              </li>
+              <li class="editor__item">
+                <button class="editor__button editor__button--setting" type="button">
+                  <span class="visually-hidden">Негатив</span>
+                  <svg class="editor__svg" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="31.92px" height="31.92px" viewBox="-35.422 -7.96 31.92 31.92" enable-background="new -35.422 -7.96 31.92 31.92" xml:space="preserve">
+                    <path d="M-19.462-3.96c6.595,0,11.96,5.365,11.96,11.96s-5.365,11.96-11.96,11.96S-31.422,14.595-31.422,8 S-26.057-3.96-19.462-3.96 M-19.462-7.96c-8.814,0-15.96,7.145-15.96,15.96c0,8.813,7.146,15.96,15.96,15.96S-3.502,16.813-3.502,8 C-3.502-0.815-10.648-7.96-19.462-7.96L-19.462-7.96z" />
+                    <path d="M-19.462,16.331c4.706,0,8.52-3.813,8.52-8.52c0-4.705-3.813-8.519-8.52-8.519" />
+                  </svg> </button>
+              </li>
+            </ul>
+            <div class="editor__wrapper-scale-and-button">
+            <div class="editor__scale-items">
+              <div class="editor__control">
+                <div class="editor__scale"></div>
+                <div class="editor__toggle editor__toggle--crop"></div>
+              </div>
+              <div class="editor__control editor__control--hidden">
+                <div class="editor__scale"></div>
+                <div class="editor__toggle editor__toggle--fill"></div>
+              </div>
+              <div class="editor__control editor__control--hidden">
+                <div class="editor__scale"></div>
+                <div class="editor__toggle editor__toggle--contrast"></div>
+              </div>
+            </div>
+          <div class="editor__button-wrapper">
+            <button class="button editor__pushbutton editor__pushbutton--send">Запостить</button>
+            <button class="button editor__pushbutton editor__pushbutton--cancel">Отмена</button>
+          </div>
         </div>
-        <div class="editor__button">
-          <button class="editor__button--send">Запостить</button>
-          <button class="editor__button--cancel">Отмена</button>
         </div>
       </form>
     </section>
   </main>
-  <footer class="page-footer">
+  <footer class="page-footer container">
     <img class="page-footer__logo" src="img/logo-pink-blue-mobile.svg" width="147px" height="40px" alt="картинка очков пинк">
     <ul class="page-footer__list social-list">
       <li class="social-list__item">
@@ -267,20 +281,21 @@
   <div></div>
 </body>
 <script>
-  var navMainList = document.querySelector('.main-nav__list');
-  var navToggle = document.querySelector('.main-nav__toggle');
-  var navMain = document.querySelector('.main-nav');
+var navMainList = document.querySelector('.main-nav__list');
+var navToggle = document.querySelector('.main-nav__toggle');
+var navMain = document.querySelector('.main-nav');
 
-  navMain.classList.remove('main-nav--nojs');
+navMain.classList.remove('main-nav--nojs');
 
-  navToggle.addEventListener('click', function() {
-    navToggle.classList.toggle('main-nav__toggle--closed');
-    if (navMainList.classList.contains('main-nav__list--open')) {
-      navMainList.classList.remove('main-nav__list--open');
-    } else {
-      navMainList.classList.add('main-nav__list--open');
-    }
-  });
+navToggle.addEventListener('click', function() {
+  navToggle.classList.toggle('main-nav__toggle--closed');
+  if (navMainList.classList.contains('main-nav__list--open')) {
+    navMainList.classList.remove('main-nav__list--open');
+  } else {
+    navMainList.classList.add('main-nav__list--open');
+  }
+});
+
 </script>
 
 </html>
